# cta2045-proxy

./: .ebus-spec.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  spec-drift.yml  test.yml
config/: config.example.toml
src/cta2045_proxy/: __init__.py  broker.py  cli.py  config.py  core.py  emitter.py  mapping.py
src/cta2045_proxy/ucm/: __init__.py  native.py  skycentrics.py
systemd/: cta2045-proxy.service
tests/: test_import.py  test_mapping.py
tools/: README.md  ucm-configure  ucm-discover  ucm-watch
